tolk-tester/tests/invalid-symbol/err-2649.tolk
fun main(): int {
    var demo_10: int = demo_10;
}

/**
@compilation_should_fail
@stderr undefined symbol `demo_10`
 */
